--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "check-word": "^1.1.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.1"
   },
