--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "nodemon start"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +16,5 @@
     "check-word": "^1.1.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
   }
 }
