--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "check-word": "^1.1.0",
     "express": "^4.17.1",
     "socket.io": "^4.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
