--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "check-word": "^1.1.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
